Fix input text visibility issues in patient portal CSS

--- a/frontend/patient-portal/src/app/pages/auth/forgot-password.component.scss
+++ b/frontend/patient-portal/src/app/pages/auth/forgot-password.component.scss
@@ -132,6 +132,16 @@ mat-form-field {
       &::placeholder {
         color: #a0aec0;
       }
+      
+      // Fix for autofill
+      &:-webkit-autofill,
+      &:-webkit-autofill:hover,
+      &:-webkit-autofill:focus {
+        -webkit-text-fill-color: #1a202c !important;
+        -webkit-box-shadow: 0 0 0px 1000px #f7fafc inset !important;
+        box-shadow: 0 0 0px 1000px #f7fafc inset !important;
+        caret-color: #1a202c !important;
+      }
     }
     
     .mdc-text-field--outlined .mdc-notched-outline__leading,
